Fix spacing issues for home page theme cards in IE

--- a/src/scss/4_state/content/cards.scss
+++ b/src/scss/4_state/content/cards.scss
@@ -84,3 +84,23 @@
     }
   }
 }
+
+// IE fixes.
+@media all and (-ms-high-contrast: none) and (min-width: $phab), (-ms-high-contrast: active) and (min-width: $phab) {
+
+  .section--info-services {
+
+    // Since IE is using a basic flexbox layout for card-decks we
+    // don't have any grid-gap. So we use padding instead.
+    .card-deck {
+
+      > *:nth-child(odd) {
+        padding-right: 1rem;
+      }
+
+      > *:nth-child(even) {
+        padding-left: 1rem;
+      }
+    }
+  }
+}
